--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "watchpack": "^1.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
